# paged_attn_dlm

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  builder.sh  fa1_forward.cpp  fa1_forward.cu  fa1_forward.cuh  fa1_fwd.cu  fa1_fwd.cuh  naive_attention.h  page_manager.py  paged_data.cuh  paged_fa1.cu  qkt_computation.cu  qkt_computation.cuh  reductionStep.cu  reductionStep.cuh  runFA.sh  runTest.sh  vm_setup.sh
fa1Forward/: fa1Forward.cu  fa1Forward.cuh  naiveAttention.cpp
fa1_forward/: fa1_forward.cuh  naive_attention.cpp  naive_attention.h
qktStep/: naiveQkt.cpp  naiveQkt.h  naive_qkt.cpp  qktComputation.cuh  qktRunner.cu  qktRunner.cuh  qkt_runner.cu  qkt_runner.cuh
reductionStep/: naiveReduction.cpp  naiveReduction.h  reductionStep.cuh  reductionStepRunner.cu  reductionStepRunner.cuh
